# editorium

./: .gitignore  Cargo.toml  Makefile  NOTES.md  README.md
src/: cli.rs  font.rs  key_binds.rs  main.rs  project.rs  tab.rs  text_box.rs  theme.rs
src/tab/: tab_widget.rs
src/text_box/: text_box.rs
src/theme/: button.rs  container.rs  menu.rs  pane_grid.rs  pick_list.rs  scrollable.rs  tab_bar.rs  text.rs  text_input.rs
