[package]
name = "editorium"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.7"
iced = { version = "0.13.1", features = ["highlighter"] }
iced_aw = "0.12.2"
log = "0.4.27"
rfd = "0.15.3"
clap = { version = "4.5.37", features = ["derive"] }
cosmic-text = { version = "0.14.2", features = ["syntect"] }
